// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeToggle > snapshots > matches snapshot in dark mode 1`] = `
<div>
  <button
    aria-label="Switch to light theme"
    class="p-2 rounded-md transition-colors hover:bg-gray-100 dark:hover:bg-gray-800"
    title="Light mode"
  >
    <svg
      class="lucide lucide-sun-icon lucide-sun"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="4"
      />
      <path
        d="M12 2v2"
      />
      <path
        d="M12 20v2"
      />
      <path
        d="m4.93 4.93 1.41 1.41"
      />
      <path
        d="m17.66 17.66 1.41 1.41"
      />
      <path
        d="M2 12h2"
      />
      <path
        d="M20 12h2"
      />
      <path
        d="m6.34 17.66-1.41 1.41"
      />
      <path
        d="m19.07 4.93-1.41 1.41"
      />
    </svg>
  </button>
</div>
`;

exports[`ThemeToggle > snapshots > matches snapshot in light mode 1`] = `
<div>
  <button
    aria-label="Switch to dark theme"
    class="p-2 rounded-md transition-colors hover:bg-gray-100 dark:hover:bg-gray-800"
    title="Dark mode"
  >
    <svg
      class="lucide lucide-moon-icon lucide-moon"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
      />
    </svg>
  </button>
</div>
`;
